# alif_ensemble-cmsis-dfp

./: AlifSemiconductor.Ensemble.pdsc  README.md  gen_pack.sh
Alif_CMSIS/Include/: Camera_Sensor.h  DMA_Common.h  Driver_ADC.h  Driver_CAN_EX.h  Driver_CDC200.h  Driver_CMP.h  Driver_CPI.h  Driver_CRC.h  Driver_Common.h  Driver_DAC.h  Driver_DMA.h  Driver_HWSEM.h  Driver_I2C_EX.h  Driver_I3C.h  Driver_IO.h  Driver_LPTIMER.h  Driver_MIPI_CSI2.h  Driver_MIPI_DSI.h  Driver_MRAM.h  Driver_OSPI.h  Driver_PDM.h  Driver_RTC.h  Driver_SAI_EX.h  Driver_SPI_EX.h  Driver_USART_EX.h  Driver_UTIMER.h  Driver_WDT.h  dma_opcode.h  evtrtr.h
Alif_CMSIS/Include/config/: analog_config.h
Alif_CMSIS/Source/: CANFD_Private.h  Camera_Sensor_i2c.c  Camera_Sensor_i2c.h  DMA_dev.h  DPHY_CSI2.c  DPHY_CSI2.h  DPHY_Common.c  DPHY_DSI.c  DPHY_DSI.h  DPHY_Loopback_test.h  DPHY_Private.h  DPHY_Test_and_Control_Interface.h  DPHY_init.c  DPHY_init.h  DSI_DCS.h  Driver_ADC.c  Driver_ADC_Private.h  Driver_CAN.c  Driver_CDC200.c  Driver_CDC_Private.h  Driver_CMP.c  Driver_CMP_Private.h  Driver_CPI.c  Driver_CPI_Private.h  Driver_CRC.c  Driver_CRC_Private.h  Driver_CSI_Private.h  Driver_DAC.c  Driver_DAC_Private.h  Driver_DMA.c  Driver_DMA_Private.h  Driver_DSI_Private.h  Driver_GPIO.c  Driver_GPIO_Private.h  Driver_HWSEM.c  Driver_HWSEM_Private.h  Driver_I2C.c  Driver_I2C_Private.h  Driver_I2S.c  Driver_I2S_Private.h  (+33 more)
Boards/AppKit-e7-aiml/Doc/: README.md
Boards/AppKit-e7-aiml/Drivers/: vio_AppKit-E7-AIML.c  vstream_audio_in.c  vstream_video_in.c  vstream_video_out.c
Boards/DevKit-e4/: board_defs.h
Boards/DevKit-e7/Doc/: README.md
Boards/DevKit-e7/Drivers/: vio_DevKit-E7.c
Boards/Templates/Baremetal/: demo_adc.c  demo_adc_clickboard.c  demo_adc_exttrigger.c  demo_adc_potentiometer.c  demo_bmi323.c  demo_canfd_blockingmode.c  demo_canfd_busmonitor.c  demo_canfd_extloopback.c  demo_canfd_intloopback.c  demo_canfd_normalmode.c  demo_cdc200.c  demo_cmp.c  demo_crc.c  demo_dac.c  demo_dma_memcpy.c  demo_dphy_loopback.c  demo_flash_issi.c  demo_gt911.c  demo_hwsem.c  demo_hyperram_e1c.c  demo_hyperram_e4.c  demo_hyperram_e7.c  demo_i2c.c  demo_i2s.c  demo_i3c_i2cbusproxy.c  demo_i3c_i2cmixbus.c  demo_i3c_master.c  demo_i3c_slave.c  demo_icm42670p.c  demo_led_blinky.c  demo_led_breathe.c  demo_lpi2c0.c  demo_lppdm.c  demo_lpspi.c  demo_lptimer.c  demo_lpuart.c  demo_lvgl.c  demo_mram.c  demo_parallel_display.c  demo_pdm.c  (+15 more)
Boards/Templates/FreeRTOS/: demo_adc_clickboard_freertos.c  demo_adc_exttrigger_freertos.c  demo_adc_freertos.c  demo_adc_potentiometer_freertos.c  demo_camera_arx3a0_freertos.c  demo_camera_mt9m114_freertos.c  demo_canfd_busmonitor_freertos.c  demo_canfd_extloopback_freertos.c  demo_canfd_intloopback_freertos.c  demo_canfd_normalmode_freertos.c  demo_cdc_freertos.c  demo_cmp_freertos.c  demo_crc_freertos.c  demo_dac_freertos.c  (+30 more)
Debug/SVD/: AE822FA0E5597BS0_CM55_HE_View.svd  AE822FA0E5597BS0_CM55_HP_View.svd
components/Include/: Driver_IMU.h  Driver_Touch_Screen.h  IS25WX256.h  S80K_HyperRAM.h  WM8904_Private.h  WM8904_codec_i2c.h  WM8904_driver.h  WiFi_utils.h  WiFi_we310f5.h  WiFi_we310f5_HW_Config.h  driver_phy.h
components/Source/: BMI323_IMU.c  GT911_touch_driver.c  HM0360_camera_sensor.c  ICM42670P_IMU.c  ILI6122_LCD_panel.c  ILI9488_LCD_panel.c  ILI9806E_LCD_panel.c  IS25WX256.c  MT9M114_Camera_Sensor.c  OV5647_camera_sensor.c  OV5675_camera_sensor.c  S80K_HyperRAM.c  WM8904_codec_i2c.c  WM8904_driver.c  WiFi_utils.c  WiFi_we310f5.c  WiFi_we310f5_HW.c  ar0144_camera_sensor.c  ar0145_camera_sensor.c  ar0246_camera_sensor.c  arx3A0_camera_sensor.c  driver_phy.c  we310f5.c  we310f5.h  we310f5_SPI.c  we310f5_SPI.h
docs/: Doxyfile  Overview.md  gen_doc.sh
drivers/include/: adc.h  canfd.h  cdc.h  cmp.h  cpi.h  crc.h  csi.h  dac.h  dma.h  dma_ctrl.h  dma_op.h  drivers_common.h  dsi.h  gpio.h  hwsem.h  i2c.h  i2s.h  i3c.h  lpi2c.h  lptimer.h  mhu.h  mhu_driver.h  mram.h  ospi.h  ospi_hyperram_xip.h  pdm.h  pinconf.h  rtc.h  sd.h  sd_host.h  sdio.h  spi.h  sys_ctrl_adc.h  sys_ctrl_aes.h  sys_ctrl_analog.h  sys_ctrl_canfd.h  sys_ctrl_cdc.h  sys_ctrl_cmp.h  sys_ctrl_cpi.h  sys_ctrl_csi.h  (+22 more)
drivers/source/: adc.c  canfd.c  cdc.c  cmp.c  cpi.c  crc.c  csi.c  dma_ctrl.c  dma_op.c  dsi.c  i2c.c  i2s.c  i3c.c  lpi2c.c  mhu_driver.c  mhu_receiver.c  mhu_sender.c  mram.c  ospi.c  ospi_hyperram_xip.c  pdm.c  pinconf.c  sd.c  sd_host.c  sdio.c  spi.c  uart.c  utimer.c
libs/board_config/: board_config.c  board_config.h
ospi_xip/app/: app_issi_flash.c  ospi_xip_issi_flash.c
ospi_xip/include/: ospi_xip_aes_key.h  ospi_xip_user.h  setup_flash_xip.h
scripts/clang-format/: .clang-format  do_clang_formatting.py
scripts/cmake/: CMakeLists.txt  CMakePresets.json  all_build.sh  build_stats.sh  run.sh  se_flashing.sh
scripts/cmake/Include_RTE_Comp/ensemble/e1c/: RTE_Components.h
scripts/cmake/Include_RTE_Comp/ensemble/e4/: RTE_Components.h
scripts/cmake/Include_RTE_Comp/ensemble/e7/: RTE_Components.h
scripts/cmake/rtss/: README.md  utilities_func.cmake
scripts/cmake/rtss/board_cmake/: board.cmake
scripts/cmake/rtss/device_cmake/: device.cmake
scripts/cmake/rtss/drivers_cmake/: drivers.cmake
scripts/cmake/rtss/host_services_cmake/: se_host_services.cmake
scripts/cmake/rtss/os_cmake/: baremetal.cmake
scripts/cmake/rtss/toolchains/: compiler_config.cmake  toolchain.cmake
se_services/include/: aipm.h  services_lib_api.h  services_lib_bare_metal.h  services_lib_ids.h  services_lib_linux.h  services_lib_protocol.h
se_services/port/: clock_runtime.c  se_services_port.c
se_services/source/: services_host_application.c  services_host_boot.c  services_host_clocks.c  services_host_cryptocell.c  services_host_error.c  services_host_extsys0.c  services_host_handler.c  services_host_handler_linux.c  services_host_maintenance.c  services_host_padcontrol.c  services_host_pinmux.c  services_host_power.c  services_host_system.c  services_host_update.c
se_services/templates/: m55_services_main.c  services_lib_interface.c  services_lib_interface.h  services_test.c  services_test_crypto.c
(+362 files in other folders)
